# http-clock

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: actionlint.yml  ci.yml  release.yml  review.yml
assets/: banner.html  dpu.html  head.html  rtl_head.html  select_head.html  svg_head.html
src/: connection_counter.rs  dpu.rs  gif_banner.rs  handler.rs  html.rs  main.rs  model.rs  mygif.rs  rtl.rs  select.rs  select_handler.rs  svg.rs  svg_handler.rs
