[package]
name = "http-clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = "0.7.5"
chrono = "0.4.38"
chrono-tz = "0.9.0"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "net", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
